Name:          hbrowser
Version:       0.1
Synopsis:      A webkit browser in haskell
Description:   A webkit browser in haskell
License:       MIT
Author:        Philipp Balzarek
Maintainer:    p.balzarek@googlemail.com
Stability:     Experimental
Category:      Console
cabal-version: >= 1.6
Build-Type:    Simple

Executable hbrowser
  HS-Source-dirs: src
  Main-is: Main.hs
  Build-Depends: base >= 4 && <5
               , gtk >= 0.12.0 && < 0.13
               , webkit >= 0.12.0 && < 0.13
               , glib >= 0.12.0 && < 0.13
               , containers >= 0.3.0.0 && < 0.3.1
               , mtl >= 2.0.0.0 && < 2.0.1.0
  Other-Modules: Web.HBrowser.SetProxy
  C-Sources: src/Web/HBrowser/setproxy.c
  